force-app/main/default/objects/Item__c/fields/Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Id__c</fullName>
    <displayFormat>Item-{000}</displayFormat>
    <label>Item Id</label>
    <type>AutoNumber</type>
</CustomField>