force-app/main/default/objects/Item__c/fields/Total_Registered_Customers__c.field-meta.xml
<CustomField>
    <fullName>Total_Registered_Customers__c</fullName>
    <label>Total Registered Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>