force-app/main/default/objects/Item__c/fields/Vender_Name__c.field-meta.xml
<CustomField>
    <fullName>Vender_Name__c</fullName>
    <label>Vender Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>