force-app/main/default/objects/Item__c/validationRules/Course_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Price_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Item_Price__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Item_Price__c</errorDisplayField>
    <errorMessage>Item Price cannot be less than 0.</errorMessage>
</ValidationRule>